[package]
name = "s3-filesystem"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1.14"
tokio = { version = "1.33.0", features = ["fs", "io-util", "io-std"] }
aws-sdk-s3 = "0.35.0"
aws-config = "0.57.1"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }
